[project]
name = "aulelabs"
version = "0.1.0"
description = "Core scaffolding for the AuleLab toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrew Xu" }
]
dependencies = []

[project.urls]
Repository = "https://github.com/Andrew-XQY/AuleLab"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
